# Veclabs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PYTHON_SDK_PARITY_AUDIT_PROMPT.md  PYTHON_SDK_PHASE6_PARITY_CURSOR_PROMPT.md  README.md  THESIS.md  ui.md
apps/demo/: index.html  package-lock.json  package.json  tsconfig.json
apps/demo/src/: InspectorPanel.ts  main.ts
apps/demo/src/agent/: AgentLoop.ts  MockEmbedder.ts  events.ts
apps/demo/src/demo/: SimpleHNSW.ts
apps/demo/src/styles/: demo.css  inspector.css
benchmarks/: COMPARISON.md
crates/solvec-core/: Cargo.toml
crates/solvec-core/benches/: distance_bench.rs  hnsw_bench.rs
crates/solvec-core/examples/: percentile_bench.rs
crates/solvec-core/src/: distance.rs  encryption.rs  hnsw.rs  inspector.rs  lib.rs  merkle.rs  types.rs
crates/solvec-core/tests/: inspector_tests.rs  integration_test.rs
crates/solvec-wasm/: Cargo.toml
crates/solvec-wasm/src/: lib.rs
demo/agent-memory/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json
demo/agent-memory/public/wasm/: package.json  solvec_wasm.d.ts  solvec_wasm.js  solvec_wasm_bg.wasm  solvec_wasm_bg.wasm.d.ts
demo/agent-memory/src/app/: layout.tsx  page.tsx
demo/agent-memory/src/app/api/chat/: route.ts
docs/: architecture.md
programs/solvec/: Anchor.toml  package.json
programs/solvec/programs/solvec/: Cargo.toml
programs/solvec/programs/solvec/src/: lib.rs
programs/solvec/tests/: solvec.ts
sdk/recall/: README.md  package-lock.json  package.json  tsconfig.json
sdk/recall/src/: index.ts  recall.ts  types.ts
src/app/: globals.css
