[workspace]
members = [
    "crates/solvec-core",
    "crates/solvec-wasm",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.7"
ahash = { version = "0.8", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }
wasm-bindgen = "0.2"
hex = "0.4"
thiserror = "1.0"
log = "0.4"
