[package]
name = "solvec-core"
version = "0.1.0"
edition = "2021"
description = "High-performance HNSW vector search engine for VecLabs"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
ahash = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "distance_bench"
harness = false
