[package]
name = "solvec-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for SolVec Rust HNSW engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solvec-core = { path = "../solvec-core" }
# getrandom 0.2 for rand, 0.3 for ahash - both need WASM support
getrandom = { version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
hex = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
